--- a/_config.yml
+++ b/_config.yml
@@ -67,9 +67,11 @@ pagination_dir: page
 # Extensions
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
-theme: landscape
+theme: icarus
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: https://github.com/vincent-zheng/vincent-zheng.github.io.git
+  branch: master
